--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2639,7 +2639,7 @@
         <activity android:name="Settings$UISettingsActivity"
                  android:label="@string/ui_settings_title"
                  android:icon="@drawable/ic_settings_ui">
-             <intent-filter android:priority="1">
+             <intent-filter android:priority="5">
                  <action android:name="com.android.settings.action.SETTINGS" />
                  <category android:name="android.intent.category.DEFAULT" />
              </intent-filter>
@@ -3013,15 +3013,36 @@
                 <category android:name="android.intent.category.VOICE_LAUNCH" />
                 <category android:name="com.android.settings.SHORTCUT" />
             </intent-filter>
-            <intent-filter android:priority="3">
+            <intent-filter android:priority="4">
                 <action android:name="com.android.settings.action.SETTINGS" />
             </intent-filter>
             <meta-data android:name="com.android.settings.category"
-                android:value="com.android.settings.category.custom" />
+                android:value="com.android.settings.category.orion" />
             <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
                 android:value="com.android.settings.Substratum" />
             <meta-data android:name="com.android.settings.summary"
                 android:resource="@string/substratum_summary" />
+        </activity>
+
+        <activity android:name="Settings$MagiskActivity"
+            android:label="@string/magisk_title"
+            android:icon="@drawable/ic_settings_magisk"
+            android:taskAffinity="">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.VOICE_LAUNCH" />
+                <category android:name="com.android.settings.SHORTCUT" />
+            </intent-filter>
+            <intent-filter android:priority="3">
+                <action android:name="com.android.settings.action.SETTINGS" />
+            </intent-filter>
+            <meta-data android:name="com.android.settings.category"
+                android:value="com.android.settings.category.orion" />
+            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
+                android:value="com.android.settings.MagiskManager" />
+            <meta-data android:name="com.android.settings.summary"
+                android:resource="@string/magisk_summary" />
         </activity>
 
         <activity android:name="Settings$SuperUserActivity"
@@ -3038,7 +3059,7 @@
                 <action android:name="com.android.settings.action.SETTINGS" />
             </intent-filter>
             <meta-data android:name="com.android.settings.category"
-                android:value="com.android.settings.category.custom" />
+                android:value="com.android.settings.category.orion" />
             <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
                 android:value="com.android.settings.SuperUser" />
             <meta-data android:name="com.android.settings.summary"
@@ -3059,7 +3080,7 @@
                 <action android:name="com.android.settings.action.SETTINGS" />
             </intent-filter>
             <meta-data android:name="com.android.settings.category"
-                android:value="com.android.settings.category.custom" />
+                android:value="com.android.settings.category.orion" />
             <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
                 android:value="com.android.settings.SuperSU" />
             <meta-data android:name="com.android.settings.summary"
