--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -130,11 +130,19 @@
 
         <activity android:name=".Settings$WirelessSettings"
             android:label="@string/header_category_wireless_networks">
-            <intent-filter android:priority="4">
+            <intent-filter android:priority="5">
                 <action android:name="com.android.settings.category.wireless" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".Settings$OrionSettings"
+             android:label="@string/ui_settings_title">
+             <intent-filter android:priority="4">
+                 <action android:name="com.android.settings.category.orion" />
+                 <category android:name="android.intent.category.DEFAULT" />
+             </intent-filter>
+         </activity>
 
         <activity android:name=".Settings$DeviceSettings"
             android:label="@string/header_category_device">
@@ -2627,6 +2635,20 @@
             android:theme="@style/CryptKeeperBlankTheme"
         />
 
+        <!-- Orion settings -->
+        <activity android:name="Settings$UISettingsActivity"
+                 android:label="@string/ui_settings_title"
+                 android:icon="@drawable/ic_settings_ui">
+             <intent-filter android:priority="1">
+                 <action android:name="com.android.settings.action.SETTINGS" />
+                 <category android:name="android.intent.category.DEFAULT" />
+             </intent-filter>
+             <meta-data android:name="com.android.settings.category"
+                 android:value="com.android.settings.category.orion" />
+             <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
+                 android:value="com.android.settings.orion.UISettings" />
+        </activity>
+
         <!-- Pseudo-activity used to provide an intent-filter entry point to encryption settings -->
         <activity android:name="Settings$CryptKeeperSettingsActivity"
                 android:label="@string/crypt_keeper_encrypt_title">
@@ -2977,31 +2999,6 @@
             </intent-filter>
             <meta-data android:name="com.android.settings.PRIMARY_PROFILE_CONTROLLED"
                 android:value="true" />
-        </activity>
-
-        <!-- UI settings activity -->
-        <activity android:name="Settings$UISettingsActivity"
-                android:label="@string/ui_settings_title"
-                android:icon="@drawable/ic_settings_ui"
-                android:taskAffinity="">
-            <intent-filter android:priority="1">
-                <action android:name="com.android.settings.UI_SETTINGS" />
-                <action android:name="android.settings.UI_SETTINGS" />
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.VOICE_LAUNCH" />
-                <category android:name="com.android.settings.SHORTCUT" />
-            </intent-filter>
-            <intent-filter android:priority="9">
-                <action android:name="com.android.settings.action.SETTINGS" />
-            </intent-filter>
-            <meta-data android:name="com.android.settings.category"
-                android:value="com.android.settings.category.device" />
-            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
-                android:value="com.android.settings.orion.UISettings" />
         </activity>
 
         <receiver android:name=".widget.SettingsAppWidgetProvider"
